--- a/p8105_hw2_ay2600.md
+++ b/p8105_hw2_ay2600.md
@@ -99,19 +99,6 @@ mr_trash_wheel =
   )
 ```
 
-We clean the `mr_trash_wheel` data, provides detail records of waste
-collection, capturing various information of waste items collected,
-ranging from years 2014 to 2023. Each entry in the dataset represents a
-unique colelction event, with data on the date of collection, for
-example, like weight of waste `weight_tons`, volume of waste
-`volume_cubic_yards` etc. During the cleaning process, the `janitor` was
-used. Also, removed rows with missing dumpster values. Unnecessary
-columns `x15` and `x16` are dropped. We then calculate homes_powered
-using the formula `(weight_tons * 500) / 30` and add a `wheel_name`
-column with the value “Mr. Trash Wheel” for identification purposes.
-Additionally, the `year` column is converted to numeric values to
-facilitate subsequent analyses.
-
 ### Clean Professor. Trash Wheel
 
 ``` r
@@ -142,7 +129,7 @@ gwy_trash_wheel =
   )
 ```
 
-### Combine all `mr_trash_wheel`, `prof_trash_wheel`, and \`gwy_trash_wheel
+### Combine all `mr_trash_wheel`, `prof_trash_wheel`, and `gwy_trash_wheel`
 
 ``` r
 trash_wheel_combine = 
@@ -187,14 +174,15 @@ str(trash_wheel_combine)
   years 2021 to 2023. The key variables includes `dumpster`,
   `weight_tons`, `homes_powered`.
 
-- After cleaned and combined `mr_trash_wheel`, `prof_trash_wheel`, and
-  `gwy_trash_wheel` by `year`, rows with missing dumpster values.
-  Unnecessary columns `x15` and `x16` are dropped. `homes_powered` was
-  calculated using the formula `(weight_tons * 500) / 30` and new
-  variable name `wheel_name` column was created with the value
-  “Mr. Trash Wheel”, “Professor Trash Wheel” and “Gwynnda Trash Wheel”
-  assigned to each dataset respectively for trash wheel identification
-  purposes.
+- In the resulting `trash_whell_combine` dataset, there are 845
+  observations and 15 variables. After cleaned and combined
+  `mr_trash_wheel`, `prof_trash_wheel`, and `gwy_trash_wheel` by `year`,
+  rows with missing dumpster values. Unnecessary columns `x15` and `x16`
+  are dropped. `homes_powered` was calculated using the formula
+  `(weight_tons * 500) / 30` and new variable name `wheel_name` column
+  was created with the value “Mr. Trash Wheel”, “Professor Trash Wheel”
+  and “Gwynnda Trash Wheel” assigned to each dataset respectively for
+  trash wheel identification purposes.
 
 - The total weight collected by Professor Trash Wheel was 216.26 tons
 
@@ -227,17 +215,17 @@ mci_baseline =
 ### Description and important values of`mci_baseline`
 
 - In the `mci_baseline_full`, there are 483 observations and 6
-  variables. This data provided information of participants in the
-  study.
+  variables. This data provided basic demographic information of
+  participants in the study.
 
 - During the cleaning process, `janitor::clean_names()` function was
-  used to standardize the variable names. `mutate` function recode the
+  used to standardize the variable names. `mutate` function changed the
   `sex` variable into `Male` and `Female` categories based on the
   original numeric coding of 1 and other values. Similarly, the `apoe4`
-  variable is recoded to `Carrier` and `Non carrier` categories. The
+  variable is changed to `Carrier` and `Non carrier` categories. The
   `age_at_onset` is converted into numeric. Lastly, assigned a new
   dataset `mci_baseline`, which participants who do not have MCI
-  excluded.
+  excluded, and this is final version of baseline.
 
 - There are a total of 483 participants were recruited for the study. Of
   these participants, 97 participants developed MCI. The average
@@ -261,8 +249,44 @@ mci_amyloid =
   ) %>% 
   mutate(
     amyloid_ratio = as.numeric(amyloid_ratio)
-  )
+  ) %>% 
+  drop_na()
 ```
+
+### Description of `mci_amyloid`
+
+- In the `mci_amyloid`, there are 2263 observations and 3 variables.
+  This data provided information of participants in the study with
+  `time_in_years` elapsed since the study baseline to the visit and also
+  the biomarker `amyloid_ratio` was measure.
+
+- During the cleaning process, we skipped the first row and interpreting
+  periods as missing value. `janitor::clean_names()` function was used
+  to standardize the variable names for consistency. The `rename`
+  function is applied to change the variable name `baseline` to `time_0`
+  for reading consistency; And `rename` function applied, so variable
+  name `study_id` changed to `id` to match the `id` in `mci_baseline`.
+  Next, the data transferred from wide format to long format by using
+  the `pivot_longer` function. This process involves converting columns
+  `time_0`, `time_2`, `time_4`, and `time_8` into two columns
+  `time_in_years` and `amyloid_ratio` by using the `mutate` function.
+  So, the `time_in_years` column now holds the time information, while
+  `amyloid_ratio` column contains the corresponding `amyloid_ratio`
+  values. Finally, `amyloid_ratio` is converted to numeric.
+
+## Check the participant that only in `mci_baseline` or `mci_amyloid`
+
+``` r
+mci_baseline_only = anti_join(mci_baseline, mci_amyloid, by = "id")
+mci_amyloid_only = anti_join(mci_amyloid, mci_baseline, by = "id")
+```
+
+### Description of the `mci_baseline_only` and `mci_amyloid_only`
+
+- After checking if there are participants appear only in `mci_baseline`
+  or `mci_amyloid`, there are only 3 participants appear in
+  `mci_baseline` data, with `id`, `14`, `49`, `268`. On the other hand,
+  there are 1826 participants appear only in the `mci_amyloid` data.
 
 ## Combine both datasets
 
@@ -282,6 +306,12 @@ str(mci_combine)
 ##  $ time_in_years: chr [1:437] "time_0" "time_2" "time_4" "time_8" ...
 ##  $ amyloid_ratio: num [1:437] 0.106 0.109 0.106 0.106 0.108 ...
 ```
+
+### Description of the `mci_combine` data
+
+- In the `mci_combine` dataset, the `inner_join` function was applied so
+  that only participants who appear in both `mci_baseline` and
+  `mci_amyloid` are retained.There are 437 observations and 8 variables.
 
 ``` r
 write.csv(mci_combine, "data/mci_combine.csv")
